--- a/demo/index.html
+++ b/demo/index.html
@@ -3,186 +3,43 @@
 
 <head>
     <title>jQuery Boilerplate</title>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../src/jquery.ryukyu.menu.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="../src/jquery.ryukyu.scrolltop.js"></script>
     <style>
         body {
-            height: 1500px;
             position: relative;
+            width: 500px;
+            margin: auto;
+            padding-bottom: 100px;
         }
         
-        .test {
+        .js-scrolltop {
             position: absolute;
             bottom: 0;
-        }
-        
-        .js-menu-sub-button,
-        .js-menu-close-mobile,
-        .js-menu-hamburger-button {
-            display: block;
-            width: 50px;
-            height: 50px;
-            background: #000;
         }
     </style>
 </head>
 
 <body>
-    <!-- == Menu here == -->
-    <ul class="navigation__list navigation__list--collapse js-nav">
-        <li class="navigation__item navigation__item--tower">
-            <a href="/mock/tower/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">TOWER</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">オーシャンタワー</em>
-															</span>
-            </a>
-        </li>
-        <li class="navigation__item navigation__item--museum">
-            <a href="/mock/museum/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">MUSEUM</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">シェルミュージアム</em>
-															</span>
-
-            </a>
-            <ul class="navigation__list navigation__list--collapse">
-                <li class="navigation__item navigation__item--tower">
-                    <a href="/mock/tower/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">TOWER</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">オーシャンタワー</em>
-																			</span>
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--museum">
-                    <a href="/mock/museum/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">MUSEUM</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">シェルミュージアム</em>
-																			</span>
-
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--restaurant">
-                    <a href="/mock/restaurant/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">RESTAURANT</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">レストラン</em>
-																			</span>
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--shop">
-                    <a href="/mock/shop/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">SHOP</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">ショップ</em>
-																			</span>
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--wedding">
-                    <a href="/mock/wedding/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">WEDDING</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">ウエディング</em>
-																			</span>
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--party">
-                    <a href="/mock/party/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">PARTY</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">パーティー</em>
-																			</span>
-                    </a>
-                </li>
-                <li class="navigation__item navigation__item--facility">
-                    <a href="/mock/facility/">
-                        <span class="navigation__chars navigation__chars--en">
-																						<em class="navigation__chars--inner">FACILITY</em>
-																			</span>
-                        <span class="navigation__chars navigation__chars--ja">
-																					<em class="navigation__chars--inner">施設情報</em>
-																			</span>
-                    </a>
-                </li>
-            </ul>
-        </li>
-        <li class="navigation__item navigation__item--restaurant">
-            <a href="/mock/restaurant/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">RESTAURANT</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">レストラン</em>
-															</span>
-            </a>
-        </li>
-        <li class="navigation__item navigation__item--shop">
-            <a href="/mock/shop/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">SHOP</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">ショップ</em>
-															</span>
-            </a>
-        </li>
-        <li class="navigation__item navigation__item--wedding">
-            <a href="/mock/wedding/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">WEDDING</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">ウエディング</em>
-															</span>
-            </a>
-        </li>
-        <li class="navigation__item navigation__item--party">
-            <a href="/mock/party/">
-                <span class="navigation__chars navigation__chars--en">
-																		<em class="navigation__chars--inner">PARTY</em>
-															</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">パーティー</em>
-															</span>
-            </a>
-        </li>
-        <li class="navigation__item navigation__item--facility">
-            <a href="/mock/facility/">
-                <span class="navigation__chars navigation__chars--en">
-								<em class="navigation__chars--inner">FACILITY</em>
-					</span>
-                <span class="navigation__chars navigation__chars--ja">
-																	<em class="navigation__chars--inner">施設情報</em>
-															</span>
-            </a>
-        </li>
-    </ul>
-    <div class="test">hahaha</div>
+    <p class="paragraph">
+        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
+        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Where does it come from? Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+        from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the
+        word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the
+        theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+        Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. Why do we use it? It is a long established fact
+        that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making
+        it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved
+        over the years, sometimes by accident, sometimes on purpose (injected humour and the like). Where can I get some? There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+        humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+        Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks
+        reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.
+    </p>
+    <div class="js-scrolltop">scrolltotop</div>
     <script>
         $(function() {
-            $(".test").scrolltop();
-            $('.js-nav').ryukyumenu({
-                // addCloseButtonMobile: false
-            });
+            $(".js-scrolltop").scrolltop();
         });
     </script>
 </body>
