--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>jQuery Boilerplate</title>
+    <title>jQuery Scroll to top</title>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="../src/jquery.ryukyu.scrolltop.js"></script>
     <style>
